FISH-6259 more ant logs